# cochlea-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
benches/: benchmarks.rs
examples/: place_code.rs
src/: complex.rs  filters.rs  ihc.rs  lib.rs  middle_ear.rs  model.rs  synapse.rs
tests/: validation.rs
