[package]
name = "cochlea-rs"
version = "0.1.0"
edition = "2021"
description = "Rust port of the Zilany et al. (2014) auditory periphery model"
license = "GPL-3.0"
keywords = ["audio", "cochlea", "neuroscience", "auditory"]
categories = ["science", "simulation"]
repository = "https://github.com/knoguchi/cochlea-rs"

# Credits:
# Rust port of cochlea Python library by Marek Rudnicki
# https://github.com/mrkrd/cochlea
# Which implements: Zilany, M.S.A., Bruce, I.C., & Carney, L.H. (2014)
# "Updated parameters and expanded simulation options for a model of the auditory periphery"
# J. Acoust. Soc. Am. 135(1), 283-286

[lib]
name = "cochlea"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["pyo3", "numpy"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
numpy = { version = "0.23", optional = true }
rand = "0.8"
rand_distr = "0.4"
rustfft = "6.2"
rayon = "1.11"

[dev-dependencies]
approx = "0.5"
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
